# hmg_wiki

./: .gitignore  README.md  W0_before_start.md
Retrospection/: Day1.md  Day2.md
Retrospective/: 20240703.md  20240705.md  20240708.md  20240709.md  20240710.md  20240711.md  20240712.md  20240715.md  20240716.md  20240717.md  20240718.md  20240719.md  20240722.md  20240723.md  20240724.md  20240725.md  20240726.md  20240729.md  20240730.md  20240731.md  20240801.md  20240802.md  20240805.md  20240806.md  20240807.md  20240808.md  20240809.md  20240812.md  20240813.md  20240814.md  20240816.md  20240819.md  20240820.md  20240821.md  20240822.md  20240823.md  20240826.md  Day3.md  Day4.md  Day5.md
W0_guide/: pep8.md
W1_mission/submission1_mtcars/: mtcars.ipynb  pyproject.toml
W1_mission/submission2_sql/: df3.db  pyproject.toml  sql_practice.ipynb  sqltut.xlsx
W1_mission/submission3_etl/: etl_project_gdp.py  etl_project_gdp_imf_official.py  etl_project_gdp_with_sql.py  etl_project_log.txt  extract_region_data.py  extract_region_data_with_multiprocess.py  extract_region_data_with_multithread.py  pyproject.toml  region.csv  region.txt
W2_mission/submission1_thread_pool/: pool.py  pyproject.toml
W2_mission/submission2_thread_process/: process.py  pyproject.toml
W2_mission/submission3_thread_queue/: pyproject.toml  thread_queue.py
W2_mission/submission4_thread_all/: pyproject.toml  thread_all.py
W2_mission/submission5_sentiment_analysis/: .Dockerignore  Dockerfile  README.md  analysis.ipynb  pyproject.toml  team_analysis.ipynb  team_analysis_prototype.ipynb  team_analysis_prototype.py  team_analysis_test.ipynb
W2_mission/submission6_deploy_docker_to_ec2/: .Dockerignore  Dockerfile  pyproject.toml  requirements.txt  user_data.bash  w1m1_mtcars.ipynb  w1m2_sql.ipynb  w1m3_etl_project_gdp.py  w1m3_etl_project_gdp_with_sql.py  w2m1_pool.py  w2m2_process.py
W3_mission/submission1_single_node_cluster_hadoop/: Dockerfile  Makefile  README.md  core-site.xml  docker-compose.yml  format-hdfs.sh  (+2 more)
W4_mission/submission2_single_hadoop_nyc_tlc_trip_record_analysis/: README.md  docker-compose.yml  pyproject.toml
W4_mission/submission2_single_hadoop_nyc_tlc_trip_record_analysis/hadoop_single_cluster/: hadoop-env.sh  hadoop_entrypoint.sh
W4_mission/submission2_single_hadoop_nyc_tlc_trip_record_analysis/spark_base/: Dockerfile  spark-defaults.conf
W4_mission/submission2_single_hadoop_nyc_tlc_trip_record_analysis/spark_history/: Dockerfile  history_entrypoint.sh
W4_mission/submission2_single_hadoop_nyc_tlc_trip_record_analysis/spark_master/: Dockerfile  master_entrypoint.sh
W4_mission/submission2_single_hadoop_nyc_tlc_trip_record_analysis/spark_worker/: Dockerfile
(+93 files in other folders)
