[tool.poetry]
name = "submission1-mtcars"
version = "0.1.0"
description = ""
authors = ["patrashu <qhdrmfdl123@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
numpy = "^2.0.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
