[tool.poetry]
name = "submission2-sql"
version = "0.1.0"
description = ""
authors = ["patrashu <qhdrmfdl123@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
