[tool.poetry]
name = "submission3-etl"
version = "0.1.0"
description = ""
authors = ["patrashu <qhdrmfdl123@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
datetime = "^5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"